--- a/resources/assets/sass/citeup/front/_about.scss
+++ b/resources/assets/sass/citeup/front/_about.scss
@@ -15,7 +15,7 @@
 
     .content-container {
 
-        background-image: url(../storage/images/web/bg_about.png);
+        background-image: url(../images/web/bg_about.png);
         background-repeat: repeat-x;
         background-size: 700px;
 
