--- a/resources/assets/sass/citeup/front/_activities.scss
+++ b/resources/assets/sass/citeup/front/_activities.scss
@@ -15,7 +15,7 @@
     }
 
     .content-container {
-        background-image: url(../storage/images/web/bg_contact.png);
+        background-image: url(../images/web/bg_contact.png);
         background-repeat: repeat-x;
         background-size: 800px;
 
