--- a/resources/assets/sass/citeup/front/landing/_activities.scss
+++ b/resources/assets/sass/citeup/front/landing/_activities.scss
@@ -4,7 +4,7 @@
     $icon-bg: $signature-dark;
 
     background: $signature-lighter;
-    background-image: url(../storage/images/web/bg_about.png);
+    background-image: url(../images/web/bg_about.png);
     background-repeat: repeat-x;
     background-size: 800px;
     padding: 20px 0 70px;
