--- a/resources/assets/sass/citeup/front/landing/_contact.scss
+++ b/resources/assets/sass/citeup/front/landing/_contact.scss
@@ -3,7 +3,7 @@
 
     padding: 10px 0 60px;
     background-color: $signature-lighter;
-    background-image: url(../storage/images/web/bg_contact.png);
+    background-image: url(../images/web/bg_contact.png);
     background-repeat: repeat-x;
     background-size: 900px;
 
