--- a/resources/assets/sass/citeup/front/_about.scss
+++ b/resources/assets/sass/citeup/front/_about.scss
@@ -45,7 +45,7 @@
             }
         }
 
-        h2 {
+        h1, h2 {
             margin: 0;
             font-size: 18pt;
             font-weight: 300;
@@ -129,7 +129,7 @@
         .panel-content {
             font-size: 10.5pt;
 
-            h2 { 
+            h1, h2 { 
                 font-size: 22.5pt;
             }
 
