Added acl to committees

--- a/resources/assets/sass/citeup/_index.scss
+++ b/resources/assets/sass/citeup/_index.scss
@@ -300,6 +300,10 @@
         margin: 0;
     }
 
+    .small-title {
+        font-size: 14pt;
+    }
+
     .user-img {
         width: 35px;
         margin: 0 5px;
