--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14070,6 +14070,10 @@ trix-editor .attachment progress {
   margin: 0;
 }
 
+.data-panel .small-title {
+  font-size: 14pt;
+}
+
 .data-panel .user-img {
   width: 35px;
   margin: 0 5px;
