--- a/resources/assets/sass/citeup/front/landing/_welcometron.scss
+++ b/resources/assets/sass/citeup/front/landing/_welcometron.scss
@@ -98,6 +98,10 @@
 
         .countdown {
 
+            .unit-item {
+                margin: 0 5px;
+            }
+
             .unit-number {
                 width: 100px;
                 text-align: center;
