--- a/resources/assets/sass/citeup/_index.scss
+++ b/resources/assets/sass/citeup/_index.scss
@@ -587,6 +587,52 @@
 
 }
 
+.quick-nav {
+
+    &.panel-body {
+        padding: 0;
+    }
+
+    .row {
+        margin: 0;
+    }
+
+    .quick-nav-item {
+        width: 20%;
+        padding: 25px 15px;
+        text-align: center;
+        border: 1px solid #ddd;
+    }
+
+    .quick-nav-icon {
+        font-size: 28pt;
+        margin-bottom: 5px;
+    }
+
+}
+
+.panel-nav {
+
+    .panel-nav-item {
+
+        .panel-body {
+            padding: 30px 15px;
+        }
+
+        text-align: center;
+    }
+    
+    .panel-nav-icon {
+        font-size: 40pt;
+        margin-bottom: 20px;
+    }
+
+    .panel-nav-title {
+        font-size: 13.5pt;
+    }
+
+}
+
 .btn-circle {
     border-radius: 50%;
     padding: 13px 10px;
