Added new welcometron for registration phase

--- a/resources/assets/sass/citeup/_front.scss
+++ b/resources/assets/sass/citeup/_front.scss
@@ -5,7 +5,7 @@ $signature-lighter: #ffc533;
 $signature-light: #f49e26;
 $signature-dark: #dd7322;
 
-$light-text-color: #eeeedd;
+$light-text-color: #fff;
 $original-text-color: #636b6f;
 
 $content-min-height: 615px;
