--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12397,7 +12397,7 @@ trix-editor .attachment progress {
   }
 }
 
-#front-welcometron {
+#front-welcometron .pre-registration {
   height: 450px;
   background-color: #2a2a2a;
   background-image: url(../images/web/bg_welcometron.png);
@@ -12407,89 +12407,176 @@ trix-editor .attachment progress {
   background-size: 500px;
 }
 
-#front-welcometron .logo-placeholder {
+#front-welcometron .pre-registration .logo-placeholder {
   margin-top: 60px;
 }
 
-#front-welcometron .logo-placeholder img {
+#front-welcometron .pre-registration .logo-placeholder img {
   width: 200px;
 }
 
-#front-welcometron .text-placeholder {
+#front-welcometron .pre-registration .text-placeholder {
   margin-top: 140px;
   color: #161616;
   font-weight: 700;
 }
 
-#front-welcometron .title {
+#front-welcometron .pre-registration .title {
   width: 500px;
 }
 
-#front-welcometron .notice {
+#front-welcometron .pre-registration .notice {
   margin-bottom: 0;
   font-size: 9pt;
 }
 
-#front-welcometron .countdown .unit-number {
+#front-welcometron .pre-registration .countdown .unit-number {
   width: 35px;
   text-align: center;
   font-size: 20pt;
 }
 
-#front-welcometron .countdown .unit-info {
+#front-welcometron .pre-registration .countdown .unit-info {
   font-size: 9pt;
 }
 
 @media (min-width: 480px) {
-  #front-welcometron {
+  #front-welcometron .pre-registration {
     height: 550px;
     background-size: 650px;
   }
-  #front-welcometron .logo-placeholder img {
+  #front-welcometron .pre-registration .logo-placeholder img {
     width: 300px;
   }
-  #front-welcometron .text-placeholder {
+  #front-welcometron .pre-registration .text-placeholder {
     margin-top: 155px;
   }
-  #front-welcometron .notice {
+  #front-welcometron .pre-registration .notice {
     font-size: 11pt;
   }
-  #front-welcometron .countdown .unit-number {
+  #front-welcometron .pre-registration .countdown .unit-number {
     width: 60px;
     font-size: 30pt;
   }
-  #front-welcometron .countdown .unit-info {
+  #front-welcometron .pre-registration .countdown .unit-info {
     font-size: 11pt;
   }
 }
 
 @media (min-width: 768px) {
-  #front-welcometron {
+  #front-welcometron .pre-registration {
     height: 750px;
     background-size: auto;
   }
-  #front-welcometron .text-placeholder {
+  #front-welcometron .pre-registration .text-placeholder {
     margin-top: 225px;
   }
-  #front-welcometron .notice {
+  #front-welcometron .pre-registration .notice {
     font-size: 14pt;
   }
-  #front-welcometron .countdown .unit-item {
+  #front-welcometron .pre-registration .countdown .unit-item {
     margin: 0 5px;
   }
-  #front-welcometron .countdown .unit-number {
+  #front-welcometron .pre-registration .countdown .unit-number {
     width: 100px;
     text-align: center;
     font-size: 48pt;
   }
-  #front-welcometron .countdown .unit-info {
+  #front-welcometron .pre-registration .countdown .unit-info {
     font-size: 12pt;
+  }
+}
+
+#front-welcometron .registration-competition {
+  background-color: #ffc533;
+  background-image: url(../images/web/bg_welcometron_bottom.png);
+  background-repeat: repeat-x;
+  background-position: bottom;
+  background-size: 900px;
+}
+
+#front-welcometron .registration-competition .logo-holder {
+  display: none;
+  position: absolute;
+  width: 100%;
+  margin-top: 60px;
+  padding: 0 20px;
+}
+
+#front-welcometron .registration-competition .logo-holder img {
+  width: 150px;
+}
+
+#front-welcometron .registration-competition .welcome-text {
+  padding: 20px 0;
+  font-size: 10pt;
+  font-weight: 600;
+  background-image: url(../images/web/text_bg.png);
+  background-repeat: no-repeat;
+  background-position: center -1px;
+  background-size: 300px;
+  color: #dd7322;
+}
+
+#front-welcometron .registration-competition .illustration {
+  width: 100%;
+  margin-left: -10px;
+  margin-top: 10px;
+  margin-bottom: 50px;
+}
+
+@media (min-width: 480px) {
+  #front-welcometron .registration-competition .welcome-text {
+    padding: 30px 0;
+    background-size: 410px;
+  }
+  #front-welcometron .registration-competition .welcome-text div:first-child {
+    font-size: 12pt;
+  }
+  #front-welcometron .registration-competition .welcome-text div:nth-child(2) {
+    font-size: 15pt;
+  }
+  #front-welcometron .registration-competition .welcome-text div:nth-child(3) {
+    font-size: 13pt;
+  }
+  #front-welcometron .registration-competition .illustration {
+    width: 475px;
+  }
+}
+
+@media (min-width: 768px) {
+  #front-welcometron .registration-competition .illustration {
+    width: 700px;
+    margin-left: -20px;
+    margin-top: 20px;
+  }
+  #front-welcometron .registration-competition .logo-holder {
+    display: block;
+  }
+}
+
+@media (min-width: 992px) {
+  #front-welcometron .registration-competition .logo-holder {
+    padding: 0 80px;
+  }
+  #front-welcometron .registration-competition .logo-holder img {
+    width: 200px;
+  }
+}
+
+@media (min-width: 1200px) {
+  #front-welcometron .registration-competition .logo-holder img {
+    width: 250px;
+  }
+  #front-welcometron .registration-competition .illustration {
+    width: 912px;
+    margin-left: -40px;
   }
 }
 
 #front-about {
   background-color: #f49e26;
-  color: #eeeedd;
+  color: #fff;
   padding: 25px 0;
 }
 
@@ -12772,7 +12859,7 @@ trix-editor .attachment progress {
   margin-top: -220px;
   margin-left: 30px;
   background: #dd7322;
-  color: #eeeedd;
+  color: #fff;
   border: 1px solid #cb6a1f;
   border-radius: 4px;
 }
@@ -12791,7 +12878,7 @@ trix-editor .attachment progress {
 }
 
 #front-map .go-to-location {
-  color: #eeeedd !important;
+  color: #fff !important;
 }
 
 @media (min-width: 480px) {
@@ -13086,6 +13173,30 @@ trix-editor .attachment progress {
   }
 }
 
+#front-reg-button {
+  padding: 40px;
+  color: #fff;
+  background-color: #dd7322;
+  text-align: center;
+  font-size: 16pt;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+#front-reg-button .btn {
+  background-color: #f49e26;
+  color: #fff;
+  border: none;
+  margin-top: 10px;
+  transition: 0.2s;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+#front-reg-button .btn:hover {
+  box-shadow: 0px 0px 15px 1px rgba(244, 158, 38, 0.5);
+}
+
 #front-sponsors {
   padding: 30px;
   margin-bottom: 30px;
@@ -13313,7 +13424,7 @@ trix-editor .attachment progress {
   padding: 0;
   border: none;
   background-color: #f49e26;
-  color: #eeeedd;
+  color: #fff;
 }
 
 #activities-page .activities-nav li {
@@ -13322,7 +13433,7 @@ trix-editor .attachment progress {
 }
 
 #activities-page .activities-nav li a {
-  color: #eeeedd;
+  color: #fff;
   padding: 10px;
   font-size: 10pt;
   font-weight: 700;
@@ -13523,7 +13634,7 @@ trix-editor .attachment progress {
   padding: 0;
   border: none;
   background-color: #f49e26;
-  color: #eeeedd;
+  color: #fff;
 }
 
 #faqs-page .faq-section {
@@ -13595,7 +13706,7 @@ trix-editor .attachment progress {
   padding: 0;
   border: none;
   background-color: #f49e26;
-  color: #eeeedd;
+  color: #fff;
 }
 
 #news-page .panel-content .panel-body {
@@ -13631,6 +13742,11 @@ trix-editor .attachment progress {
   border: none;
   box-shadow: 0px 0px 10px 1px rgba(221, 115, 34, 0.5);
   height: auto;
+  overflow-y: hidden;
+}
+
+#news-page .news-list-item:hover {
+  overflow-y: scroll;
 }
 
 #news-page .news-list-item h3 {
