--- a/resources/assets/sass/citeup/front/_news.scss
+++ b/resources/assets/sass/citeup/front/_news.scss
@@ -75,6 +75,11 @@
         border: none;
         box-shadow: 0px 0px 10px 1px rgba(221,115,34,0.5);
         height: auto;
+        overflow-y: hidden;
+
+        &:hover {
+            overflow-y: scroll;
+        }
 
         h3 {
             font-size: 14pt;
