--- a/resources/assets/sass/citeup/front/landing/_contact.scss
+++ b/resources/assets/sass/citeup/front/landing/_contact.scss
@@ -77,3 +77,27 @@
     }
 
 }
+
+#front-reg-button {
+    padding: 40px;
+    color: #fff;
+    background-color: $signature-dark;
+    text-align: center;
+    font-size: 16pt;
+    font-weight: bold;
+    text-transform: uppercase;
+
+    .btn {
+        background-color: $signature-light;
+        color: #fff;
+        border: none;
+        margin-top: 10px;
+        transition: 0.2s;
+        text-transform: uppercase;
+        font-weight: bold;
+
+        &:hover {
+            box-shadow: 0px 0px 15px 1px rgba(244,158,38,0.5);
+        }
+    }
+}
