--- a/resources/assets/sass/citeup/_index.scss
+++ b/resources/assets/sass/citeup/_index.scss
@@ -633,6 +633,17 @@
 
 }
 
+.cloak {
+    position: absolute;
+    background: rgba(255,255,255,0.8);
+    z-index: 10;
+
+    .cloak-content {
+        display: table-cell;
+        vertical-align: middle;
+    }
+}
+
 .btn-circle {
     border-radius: 50%;
     padding: 13px 10px;
